--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,10 @@ os:
   - osx
 go:
   - tip
+env:
+ global:
+   - GO111MODULE=on
+script:
+  - go get github.com/kataras/iris@master
+  - go get ./...
+  - go test -v -cover ./...
