--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,10 @@ os:
   - linux
   - osx
 go:
-  - tip
+  - 1.12.x
+env:
+ global:
+   - GO111MODULE=on
 script:
   - go get ./...
   - go test -v -cover ./...
