--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ env:
  global:
    - GO111MODULE=on
 script:
+  - go build
   - go get ./...
   - go test -v -cover ./apidoc/...
   - go test -v -cover ./authentication/...
