--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ go:
 env:
  global:
    - GO111MODULE=on
-   - GOPROXY=https://goproxy.io
+   - GOPROXY=https://gocenter.io,https://goproxy.cn,https://goproxy.io,direct
 before_install:
   - chmod +x .travis.gofmt.sh
   - chmod +x .travis.gotest.sh
